--- a/Engine/LUL_3D/LUL_3D.vcxproj
+++ b/Engine/LUL_3D/LUL_3D.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="Source\Graphics\DirectX12\SwapChain.hpp" />
     <ClInclude Include="Source\Graphics\DirectX12\Vertex.hpp" />
     <ClInclude Include="Source\Interfaces\IRenderer.hpp" />
+    <ClInclude Include="Source\Interfaces\IRendererComponent.hpp" />
     <ClInclude Include="Source\LUL_3D.hpp" />
     <ClInclude Include="Source\Math\Matrices.hpp" />
   </ItemGroup>
@@ -38,6 +39,7 @@
     <ClCompile Include="Source\Graphics\DirectX12\SwapChain.cpp" />
     <ClCompile Include="Source\Graphics\DirectX12\Vertex.cpp" />
     <ClCompile Include="Source\Interfaces\IRenderer.cpp" />
+    <ClCompile Include="Source\Interfaces\IRendererComponent.cpp" />
     <ClCompile Include="Source\Math\Matrices.cpp" />
   </ItemGroup>
   <ItemGroup>
