--- a/Engine/LUL_3D/LUL_3D.vcxproj.filters
+++ b/Engine/LUL_3D/LUL_3D.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="Source\Math\Matrices.hpp">
       <Filter>Public\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Interfaces\IRendererComponent.hpp">
+      <Filter>Public\Interfaces</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Interfaces\IRenderer.cpp">
@@ -97,6 +100,9 @@
     </ClCompile>
     <ClCompile Include="Source\Math\Matrices.cpp">
       <Filter>Private\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Interfaces\IRendererComponent.cpp">
+      <Filter>Private\Interfaces</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
