--- a/Engine/LUL_3D/LUL_3D.vcxproj
+++ b/Engine/LUL_3D/LUL_3D.vcxproj
@@ -19,28 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Graphics\DirectX12\Commands.hpp" />
-    <ClInclude Include="Source\Graphics\DirectX12\d3dx12.h" />
-    <ClInclude Include="Source\Graphics\DirectX12\Hardware.hpp" />
-    <ClInclude Include="Source\Graphics\DirectX12\Memory.hpp" />
-    <ClInclude Include="Source\Graphics\DirectX12\Renderer.hpp" />
-    <ClInclude Include="Source\Graphics\DirectX12\SwapChain.hpp" />
-    <ClInclude Include="Source\Graphics\DirectX12\Vertex.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\Commands.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\d3dx12.h" />
+    <ClInclude Include="Source\Core\DirectX12\Hardware.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\Memory.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\Renderer.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\SwapChain.hpp" />
+    <ClInclude Include="Source\Core\DirectX12\Vertex.hpp" />
     <ClInclude Include="Source\Interfaces\IRenderer.hpp" />
     <ClInclude Include="Source\Interfaces\IRendererComponent.hpp" />
     <ClInclude Include="Source\LUL_3D.hpp" />
     <ClInclude Include="Source\Math\Matrices.hpp" />
+    <ClInclude Include="Source\Primitives\Entity.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Graphics\DirectX12\Commands.cpp" />
-    <ClCompile Include="Source\Graphics\DirectX12\Hardware.cpp" />
-    <ClCompile Include="Source\Graphics\DirectX12\Memory.cpp" />
-    <ClCompile Include="Source\Graphics\DirectX12\Renderer.cpp" />
-    <ClCompile Include="Source\Graphics\DirectX12\SwapChain.cpp" />
-    <ClCompile Include="Source\Graphics\DirectX12\Vertex.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\Commands.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\Hardware.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\Memory.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\Renderer.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\SwapChain.cpp" />
+    <ClCompile Include="Source\Core\DirectX12\Vertex.cpp" />
     <ClCompile Include="Source\Interfaces\IRenderer.cpp" />
     <ClCompile Include="Source\Interfaces\IRendererComponent.cpp" />
     <ClCompile Include="Source\Math\Matrices.cpp" />
+    <ClCompile Include="Source\Primitives\Entity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LUL_Profiler\Profiler.vcxproj">
