--- a/Engine/LUL_3D/LUL_3D.vcxproj
+++ b/Engine/LUL_3D/LUL_3D.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="Source\Interfaces\IRendererComponent.hpp" />
     <ClInclude Include="Source\LUL_3D.hpp" />
     <ClInclude Include="Source\Math\Matrices.hpp" />
+    <ClInclude Include="Source\Primitives\Camera.hpp" />
     <ClInclude Include="Source\Primitives\Entity.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +43,7 @@
     <ClCompile Include="Source\Interfaces\IRenderer.cpp" />
     <ClCompile Include="Source\Interfaces\IRendererComponent.cpp" />
     <ClCompile Include="Source\Math\Matrices.cpp" />
+    <ClCompile Include="Source\Primitives\Camera.cpp" />
     <ClCompile Include="Source\Primitives\Entity.cpp" />
   </ItemGroup>
   <ItemGroup>
