--- a/Engine/LUL_3D/LUL_3D.vcxproj.filters
+++ b/Engine/LUL_3D/LUL_3D.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Source\Primitives\Camera.hpp">
       <Filter>Public\Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Core\World.hpp">
+      <Filter>Public\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Interfaces\IRenderer.cpp">
@@ -121,6 +124,9 @@
     </ClCompile>
     <ClCompile Include="Source\Primitives\Camera.cpp">
       <Filter>Private\Primitives</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Core\World.cpp">
+      <Filter>Private\Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
